err/chembl-beaker.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/chembl_beaker'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/__init__.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/__init__.py", line 55
    print "Failed to load plugin %s because of error %s" % (plugin, e.message)
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/cache'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/cache/__init__.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/cache/__init__.py", line 15
    print "Configured cache class (%s) is not a BaseCache instance, skipping caching." % cache_class
                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/cache/backends'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/D3Coords'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/autoDocs'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/calculations'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/calculations/views.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/calculations/views.py", line 70
    print 'this should be error 400'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/conversions'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/descriptors'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/fingerprints'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/jsonImages'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/jsonImages/jsonCanvas.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/jsonImages/jsonCanvas.py", line 247
    raise ValueError, 'Null molecule provided'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/marvin'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/marvin/impl.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/marvin/impl.py", line 21
    print "No mol for block:\n %s" % block
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/mcs'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/osra'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/rasterImages'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/ringInfo'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/similarityMaps'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/standarisation'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/core_apps/svgImages'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/draw'...
Listing './lib/python3.5/site-packages/chembl_beaker/beaker/plugins'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/plugins/caching.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/plugins/caching.py", line 13
    print "Caching plugin enabled but no cache backend configured, cashing will be skipped..."
                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/plugins/throttling.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/plugins/throttling.py", line 52
    print err
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/throttle'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/throttle/__init__.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/throttle/__init__.py", line 13
    print "Configured throttle class (%s) is not a BaseThrottle instance, skipping throttling." % throttle_class
                                                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/throttle/backends'...
Compiling './lib/python3.5/site-packages/chembl_beaker/beaker/throttle/backends/cacheThrottle.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/beaker/throttle/backends/cacheThrottle.py", line 16
    print err
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chembl_beaker/beaker/utils'...
Compiling './lib/python3.5/site-packages/chembl_beaker/run_beaker.py'...
***   File "./lib/python3.5/site-packages/chembl_beaker/run_beaker.py", line 41
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chembl_beaker/samples'...
Listing './lib/python3.5/site-packages/chembl_beaker/static'...
Listing './lib/python3.5/site-packages/chembl_beaker-1.2.16.egg-info'...
Listing './lib/python3.5/site-packages/netaddr'...
Listing './lib/python3.5/site-packages/netaddr/contrib'...
Listing './lib/python3.5/site-packages/netaddr/eui'...
Listing './lib/python3.5/site-packages/netaddr/ip'...
Listing './lib/python3.5/site-packages/netaddr/strategy'...
Listing './lib/python3.5/site-packages/netaddr-0.7.19.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
